# sensors_sensors_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
kit/SensorServiceKit/: BUILD.gn  index.cj
mock/: ohos.sensor.cj  ohos.vibrator.cj
new_test/sensor/test/entry/src/main/cangjie/: cjpm.toml
new_test/sensor/test/entry/src/main/cangjie/src/: main_ability.cj  test_accelerometer_uncalibrated.cj  test_list_sensor.cj  test_new_gravity_sensor.cj  test_new_gravity_simple.cj  test_sensor_on_off.cj  unittest_engine.cj
new_test1/sensor/test/: profile.json
new_test1/sensor/test/entry/src/main/cangjie/: cjpm.toml
new_test1/sensor/test/entry/src/main/cangjie/src/: index.cj  test_accelerometer_uncalibrated.cj  test_list_sensor.cj  test_sensor_funcs.cj
new_test1/sensor/test/hvigor/: hvigor-config.json5
ohos/sensor/: BUILD.gn  error.cj  ffi.cj  log.cj  sensor.cj  sensor_manager.cj
ohos/vibrator/: BUILD.gn  vibrator.cj  vibrator_ffi.cj
test/APILevel21/sensor/test/entry/src/main/cangjie/src/: constants.cj  index.cj  main_ability.cj  test_sensor_funcs.cj  test_sensor_on_off.cj  unittest_engine.cj
test/APILevel22/sensor/test/entry/src/main/: module.json5
test/hide_sensor/test/entry/src/main/cangjie/src/: Test_hide_sensor.cj  test_list_hide_sensor.cj
test/sensor/test/entry/src/main/: module.json5
test/sensor/test/entry/src/main/cangjie/: cjpm.toml
test/sensor/test/entry/src/main/cangjie/src/: test_accelerometer_uncalibrated.cj  test_list_sensor.cj  test_new_gravity_sensor.cj  test_sensor_funcs.cj  test_sensor_list_extended_add.cj  test_sensor_on_off.cj  test_sensor_options_add.cj  test_sensor_special_types_add.cj  test_sensor_subscribe_add.cj  test_sensor_uncalibrated_add.cj
test/sensor/test/hvigor/: hvigor-config.json5
