# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.sensor") {
  sources = [
    "error.cj",
    "ffi.cj",
    "log.cj",
    "sensor.cj",
    "sensor_manager.cj",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "arkui_cangjie_wrapper:ohos.base",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "sensor:cj_sensor_ffi" ]

  subsystem_name = "sensors"
  part_name = "sensors_cangjie_wrapper"
  lib_name = "sensor"
}
